Changed home page slider picture

--- a/www/css/hunge.css
+++ b/www/css/hunge.css
@@ -1,3 +1,8 @@
+/*============== HOME ===============*/
+.slider-slide {
+	padding: 0px;
+}
+
 /*============= LOGIN ===============*/
 .ml30 {
 	margin-left: 30px !important;
