--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -14,9 +14,10 @@
       <form ng-submit="doLogin()" ng-controller="user">
         <!-- Login form -->
         <div class="list pt80 mt20">
-            <div class="center">
+            <!-- Remove Picture  -->
+            <!-- <div class="center">
               <img class="cartImg mb20 mt20" ng-src="{{loginData.src}}">
-            </div>
+            </div> -->
 
           <label class="item item-input item-icon-left">
             <i class="icon ion-android-person"></i>
