--- a/www/templates/payment.html
+++ b/www/templates/payment.html
@@ -40,15 +40,20 @@
 	</div>
 
 	<div class="card">
-	  <div class="item item-divider">
+	  <div class="item item-divider font-medium">
 	    Notice
 	  </div>
-	  <div class="item item-text-wrap font-medium">
-	    We will send you an email notification once we received your payment.
+	  <div class="item item-text-wrap font-small">
+	    You will received a confirmation email shortly. Once you clear your payment, kindly 
+	    <span style="color:#F39C12;">attach a screenshot or copy of your transaction slip</span>
+	     and mail to us at 
+	    <span class="positive">endytas@wine-enterprise.com</span>. We
+	    will ship to you as soon as we received your payment.
 	  </div>
 	</div>
 	
-    	<div class="row">
+		<!-- Remove the button currently -->
+    	<!-- <div class="row">
 			<div class="col">
 				<a class="button btn-block btnContinue font-medium" ng-href="#/app/categories">
 				  Pay Later
@@ -60,7 +65,7 @@
 				  Pay Now
 				</a>
 			</div>
-		</div>
+		</div> -->
 
   </ion-content>
 </ion-view>
