--- a/www/templates/cart.list.html
+++ b/www/templates/cart.list.html
@@ -2,52 +2,30 @@
 
   <ion-content ng-controller="cartlist">
 
-
  <div class="list">
  	<!-- Content -->
- 	<!-- First Item -->
-    <div class="item item-thumbnail-left">
+ 	<!-- Items -->
+    <div class="item item-thumbnail-left" ng-repeat="cartInfo in cartList">
 	    <div class="row">
 		  <div class="col">
-		  	<img class="cartImg" ng-src="{{img.src}}">
+		  	<img class="cartImg" ng-src="{{img}}{{cartInfo.photo}}">
 		  		<br><br>
-		  	<span class="greenbox mt10">Subtotal</span>&nbsp;&nbsp;&nbsp;
-		  	<span class="subtotal">RM {{cartData[0].subtotal}}	
+		  	<span class="greenbox mt10">Subtotal</span>
+		  	<span class="subtotal">RM {{cartInfo.price}}
 		  	</span>
 		  </div>
 		  
 		  <div class="col font-small">
-		  	<span class="pl5" style="color:#9B59B6;">{{cartData[0].name}}</span>
+		  	<span class="pl5" style="color:#9B59B6;">{{cartInfo.product_name}}</span>
 		  	<br>
-		  	<span class="pl5">Quantity:</span><span style="color:#F1C40F;"> {{cartData[0].quantity}}</span>
+		  	<span class="pl5">Quantity:</span><span style="color:#F1C40F;"> {{cartInfo.qty}}</span>
 		  	<br>
-		  	<span class="pl5">Price:</span><span style="color:#7F8C8D;"> RM {{cartData[0].price}}</span>
+		  	<span class="pl5">Price:</span><span style="color:#7F8C8D;"> RM {{cartInfo.unit_price}}</span>
 		  </div>
 		  <div class="col"></div>
 		</div>
 	</div>
 
-	<!-- Second Item -->
-	<div class="item item-thumbnail-left">
-		<div class="row">
-		  <div class="col">
-		  	<img class="cartImg" ng-src="{{img.src}}">
-		  	<br><br>
-		  	<span class="greenbox">Subtotal</span>&nbsp;&nbsp;&nbsp;
-		  	<span class="subtotal">RM {{cartData[0].subtotal}}	
-		  	</span>
-		  </div>
-		 
-		  <div class="col font-small">
-		  	<span class="pl5" style="color:#9B59B6;">{{cartData[0].name}}</span>
-		  	<br>
-		  	<span class="pl5">Quantity:</span><span style="color:#F1C40F;"> {{cartData[0].quantity}}</span>
-		  	<br>
-		  	<span class="pl5">Price:</span><span style="color:#7F8C8D;"> RM {{cartData[0].price}}</span>
-		  </div>
-		  <div class="col"></div>
-		</div>
-	</div>
 	<!-- Start of total -->
 	<div class="item item-thumbnail-left">
 		<div class="row">
@@ -56,7 +34,7 @@
 			  	
 			</div>
 			<div class="col col-33">
-				<span class="font-big" style="color:#3498DB;">RM {{cartData[0].total}}	
+				<span class="font-big" style="color:#3498DB;">RM {{cartList[0].total_price}}	
 			  	</span>
 			</div>
 		</div>
