--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -5,15 +5,15 @@
 		<div class="list">
 		  <label class="item item-input item-floating-label">
 		    <span class="input-label">Username</span>
-		    <input type="text" name="username" placeholder="Username">
+		    <input type="text" ng-model="userdata.username" placeholder="Username">
 		  </label>
 		  <label class="item item-input item-floating-label">
 		    <span class="input-label">Email</span>
-		    <input type="text" placeholder="Email">
+		    <input type="text" ng-model="userdata.email" placeholder="Email">
 		  </label>
 		  <label class="item item-input item-floating-label">
 		    <span class="input-label">Password</span>
-		    <input type="password" placeholder="Password">
+		    <input type="password" ng-model="userdata.password" placeholder="Password">
 		  </label>
 		  <label class="item item-input item-floating-label">
 		    <span class="input-label">Confirm Password</span>
