--- a/www/templates/payment.html
+++ b/www/templates/payment.html
@@ -47,8 +47,10 @@
 	    You will received a confirmation email shortly. Once you clear your payment, kindly 
 	    <span style="color:#F39C12;">attach a screenshot or copy of your transaction slip</span>
 	     and mail to us at 
-	    <span class="positive">endytas@wine-enterprise.com</span>. We
-	    will ship to you as soon as we received your payment.
+	    <span class="positive">endytas@wine-enterprise.com</span>. 
+	    We will <span style="color:#2ECC71;">either ship to you</span> 
+	    as soon as we received your payment
+	    <span class="royal"> or you can pickup your goods</span> at the location selected.
 	  </div>
 	</div>
 	
