--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -37,7 +37,7 @@
           </label>
         </div>
       </form>
-        <div class="row">
+        <div class="row" ng-controller="user">
             <div class="col">
               <a class="button button-clear font-small" ng-click="showPopup()">Forgot password?</a>
             </div>
