--- a/www/templates/product.details.html
+++ b/www/templates/product.details.html
@@ -36,7 +36,7 @@
 
         <div class="card">
          <!--  <div class="item item-text-wrap"> -->
-              <ul class="list">
+              <ul class="list"> 
                 <div class="row item font-small lightbg">
                     <div class="col">
                      <span class="royal">SKU Code:</span> <div>{{productDetails.sku_code}}</div>
@@ -61,16 +61,6 @@
                         <span class="royal">Origin:</span> <div>{{productDetails.country_name}}</div>
                     </div>
                 </div>
-                <div class="row item font-small">
-                    <div class="col">
-                       <span class="royal">Status:</span> <div>{{productDetails.status}}</div>
-                    </div>
-                </div>
-                <!-- <div class="row item item-text-wrap font-small">
-                    <div class="col">
-                       Description:{{productDetails.note}}
-                    </div>
-                </div> -->
               </ul>
           <!-- </div> -->
         </div>
@@ -80,7 +70,7 @@
              Description:
           </div>
           <div class="item item-text-wrap">
-            <p class="description">{{productDetails.note}}</p>
+            <p>{{productDetails.note}}</p>
           </div>
         </div>
   
@@ -88,7 +78,6 @@
   
   </ion-content>
 </ion-view>
-
 
 
 <!-- Start of the other details -->
