--- a/www/css/hunge.css
+++ b/www/css/hunge.css
@@ -3,7 +3,47 @@
 	padding: 0px;
 }
 
+/*=====FORM VALIDADTION========*/
+.error-container {
+  margin: 5px 0;
+}
+ 
+.error-container:last-child {
+    margin: 5px 0 0;
+}
+ 
+.error {
+  padding: 2px 5px;
+  font-family: "Arial Black", Gadget, sans-serif;
+  font-size: 10px;
+  text-transform: uppercase;
+  color: #555;
+  vertical-align: middle;
+}
+ 
+.error i {
+  font-size: 20px;
+  color: #B83E2C;  
+  vertical-align: middle;
+}
+ 
+.last-error-container > .error {
+  padding: 10px 16px 0;
+}
+ 
+.has-errors {
+  border-left: 3px solid #B83E2C;
+  border-right: 3px solid #B83E2C;
+}
+ 
+.no-errors {
+  /*border-bottom: 2px solid green;*/
+  border-left: 3px solid green;
+  border-right: 3px solid green;
+}
+
 /*============= LOGIN ===============*/
+
 .ml30 {
 	margin-left: 30px !important;
 }
