--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -42,9 +42,9 @@
           Products
         </ion-item>
 
-        <ion-item menu-close ng-click="login()">
+        <ion-item menu-close ng-click="{{functionuser}}">
           <i class="ion-log-in"></i>
-          Login
+          {{loginInfo.username}}
         </ion-item>
 
         <ion-item menu-close href="#/app/order/history">
