--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -36,7 +36,7 @@
           <label class="item item-input item-icon-left" ng-class="{ 'has-errors' : loginForm.password.$invalid, 'no-errors' : loginForm.password.$valid}">
             <i class="icon ion-locked"></i>
             <span class="input-label ml30 font-small">Password</span>
-            <input type="password" name="password" ng-model="userdata.password" ng-minlength='5' ng-maxlength='20' required >
+            <input type="password" name="password" ng-model="userdata.password" required >
             <!-- <input type="text" ng-model="name"> -->
           </label>
 
@@ -49,7 +49,6 @@
           <label class="item">
             <button type="submit" class="button button-block button-positive font-medium"
             ng-disabled="loginForm.$invalid">Log in</button>
-            {{abc.id}}
           </label>
         </div>
       </form>
