--- a/www/templates/billing.html
+++ b/www/templates/billing.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Billing">
 	<ion-content ng-controller="billing">
 
-	    <form>
+	    <form ng-submit="billingForm(billing)">
 	    	<!-- Billing information of payer info  -->
 			<div class="card">
 				<div class="item item-divider font-medium">
@@ -10,22 +10,23 @@
 				<div class="item item-text-wrap">
 					<div class="row">
 						<div class="col col-50">
-							<input type="text" placeholder="First Name">
+							<input type="text" placeholder="First Name" ng-model="billing.firstName">
 						</div>
 						<div class="col col-50">
-							<input type="text" placeholder="Last Name">
+							<input type="text" placeholder="Last Name" ng-model="billing.lastName">
 						</div>
 					</div>
 					<div class="row">
 						<div class="col col-50">
-							<input type="text" placeholder="Email">
+							<input type="text" placeholder="Email" ng-model="billing.email">
 						</div>
 						<div class="col col-50">
-							<input type="text" placeholder="Phone Number">
+							<input type="text" placeholder="Phone Number" ng-model="billing.phone">
 						</div>
 					</div>
 					<div class="row">
-						<input type="text" class="ml5"  placeholder="Street Address 1">
+						<input type="text" class="ml5"  placeholder="Street Address 1" 
+						ng-model="billing.address">
 					</div>
 					<div class="row">
 						<input type="text" class="ml5"  placeholder="Street Address 2">
@@ -44,9 +45,11 @@
 			
 			<div class="row">
 				<div class="col">
-					<a class="button button-block btnCheckOut font-medium" ng-href="#/app/shipping">
+				<!-- ng-href="#/app/shipping" -->
+					<button  type="submit" class="button button-block btnCheckOut font-medium" 
+					ng-click="toShipping()">
 				  Proceed to Shipping
-				</a>
+				</button>
 				</div>
 			</div>
 		</form>
