--- a/www/templates/shipping.html
+++ b/www/templates/shipping.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Shipping Methods">
 	<ion-content ng-controller="shipping">
 			
-		<form>
+		<form ng-submit="shippingForm(shipping)">
 	    	<!-- Shipping information of receiver info  -->
 			<div class="card">
 				<div class="item item-divider font-medium">
@@ -10,22 +10,23 @@
 				<div class="item item-text-wrap" >
 					<div class="row">
 						<div class="col col-50">
-							<input type="text" placeholder="First Name">
+							<input type="text" placeholder="First Name" ng-model="shipping.firstName">
 						</div>
 						<div class="col col-50">
-							<input type="text" placeholder="Last Name">
+							<input type="text" placeholder="Last Name" ng-model="shipping.lastName">
 						</div>
 					</div>
 					<div class="row">
 						<div class="col col-50">
-							<input type="text" placeholder="Email">
+							<input type="text" placeholder="Email" ng-model="shipping.email">
 						</div>
 						<div class="col col-50">
-							<input type="text" placeholder="Phone Number">
+						    <input type="text" placeholder="Phone Number" ng-model="shipping.phone">
 						</div>
 					</div>
 					<div class="row">
-						<input type="text" class="ml5"  placeholder="Street Address 1">
+						<input type="text" class="ml5"  placeholder="Street Address 1" 
+						ng-model="shipping.address">
 					</div>
 					<div class="row">
 						<input type="text" class="ml5"  placeholder="Street Address 2">
@@ -38,6 +39,22 @@
 							<input type="text" placeholder="Zip">
 						</div>
 					</div> 
+					<!-- Add in new row for testing purpose -->
+					<div class="row">
+						<div class="col">
+						  <label class="item item-input item-select">
+						    <div class="input-label">
+						      Shipping Fee
+						    </div>
+						    <select ng-model="shipping.price">
+						      <option selected>--Select--</option>
+						      <option value="10.00">RM 10.00</option>
+						      <option value="20.00">RM 20.00</option>
+						      <option value="30.00">RM 30.00</option>
+						    </select>
+						  </label>
+						</div>	
+					</div>
 				</div>
 			</div>
 			<!-- End of shipping detail -->
@@ -63,9 +80,11 @@
 
 			<div class="row">
 				<div class="col">
-					<a class="button button-block btnCheckOut font-medium" ng-href="#/app/payment">
+				<!-- ng-href="#/app/payment" -->
+					<button type="submit" class="button button-block btnCheckOut font-medium" 
+					ng-click="toPayment()">
 				  		Pay Now
-					</a>
+					</button>
 				</div>
 			</div>
 		</form>
