--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -52,7 +52,7 @@
           Order History
         </ion-item>
 
-        <ion-item menu-close href="#/app/cart/list">
+        <ion-item menu-close href="#/app/cart/list/{{cart_id}}">
           <i class="ion-android-cart"></i>
           Cart List
           <span class="badge badge-assertive">0</span>
