--- a/www/templates/shipping.html
+++ b/www/templates/shipping.html
@@ -43,11 +43,11 @@
 					<div class="row">
 						<div class="col">
 						  <label class="item item-input item-select">
-						    <div class="input-label">
+						    <div class="input-label font-medium">
 						      Shipping Fee
 						    </div>
 						    <select ng-model="shipping.price">
-						      <option selected>--Select--</option>
+						      <option value="" selected>--Select--</option>
 						      <option value="10.00">RM 10.00</option>
 						      <option value="20.00">RM 20.00</option>
 						      <option value="30.00">RM 30.00</option>
