--- a/www/templates/shipping.html
+++ b/www/templates/shipping.html
@@ -1,86 +1,110 @@
 <ion-view view-title="Shipping Methods">
-	<ion-content ng-controller="shipping">
-			
-		<form ng-submit="shippingForm(shipping)">
-	    	<!-- Shipping information of receiver info  -->
-			<div class="card">
-				<div class="item item-divider font-medium">
-					Shipping To
+
+<!-- For place the header in centre -->
+<ion-header-bar>
+     <div class="title center"></div>
+</ion-header-bar>
+
+  <!-- Tabs -->
+  <ion-tabs class="tabs-calm tabs-icon-only">
+    <ion-tab title="Delivery">
+	    <ion-content>
+	      <!-- Tab 1 content -->
+		    <form>
+		    	<!-- Shipping information of guest info  -->
+				<div class="card pt75">
+					<div class="item item-divider font-medium">
+						Shipping Information
+					</div>
+					<div class="item item-text-wrap">
+						<div class="row">
+							<div class="col col-50">
+								<input type="text" placeholder="First Name">
+							</div>
+							<div class="col col-50">
+								<input type="text" placeholder="Last Name">
+							</div>
+						</div>
+						<div class="row">
+							<input type="text" class="ml5" placeholder="Phone Number">
+						</div>
+						<div class="row">
+							<input type="text" class="ml5"  placeholder="Street Address 1">
+						</div>
+						<div class="row">
+							<input type="text" class="ml5"  placeholder="Street Address 2">
+						</div>
+						<div class="row">
+							<div class="col col-50">
+								<input type="text" placeholder="City">
+							</div>
+							<div class="col col-50">
+								<input type="text" placeholder="Zip">
+							</div>
+						</div> 
+					</div>
 				</div>
-				<div class="item item-text-wrap" >
+				<!-- End of shipping detail -->
+
+				<div class="row">
+					<div class="col">
+						<button type="submit" class="button button-block btnCheckOut font-medium" 
+					ng-click="toPayment()">
+				  		Pay Now
+					</button>
+					</div>
+				</div>
+			</form>
+		</ion-content>
+    </ion-tab>
+
+    <ion-tab title="Self Pickup">
+      <!-- Tab 2 content -->
+      <ion-content>
+ 		<form>
+	    	<!-- Pickup information of guest info  -->
+			<div class="card pt75">
+				<div class="item item-divider font-medium">
+					Cash On Delivery
+				</div>
+				<div class="item item-text-wrap">
 					<div class="row">
 						<div class="col col-50">
-							<input type="text" placeholder="First Name" ng-model="shipping.firstName">
+							<input type="text" placeholder="First Name">
 						</div>
 						<div class="col col-50">
-							<input type="text" placeholder="Last Name" ng-model="shipping.lastName">
+							<input type="text" placeholder="Last Name">
 						</div>
 					</div>
 					<div class="row">
 						<div class="col col-50">
-							<input type="text" placeholder="Email" ng-model="shipping.email">
+							<input type="text" placeholder="Phone Number">
 						</div>
 						<div class="col col-50">
-						    <input type="text" placeholder="Phone Number" ng-model="shipping.phone">
+							<input type="text" placeholder="Venue">
 						</div>
 					</div>
-					<div class="row">
-						<input type="text" class="ml5"  placeholder="Street Address 1" 
-						ng-model="shipping.address">
-					</div>
-					<div class="row">
-						<input type="text" class="ml5"  placeholder="Street Address 2">
-					</div>
-					<div class="row">
-						<div class="col col-50">
-							<input type="text" placeholder="City">
-						</div>
-						<div class="col col-50">
-							<input type="text" placeholder="Zip">
-						</div>
-					</div> 
-					<!-- Add in new row for testing purpose -->
 					<div class="row">
 						<div class="col">
-						  <label class="item item-input item-select">
-						    <div class="input-label font-medium">
-						      Shipping Fee
-						    </div>
-						    <select ng-model="shipping.price">
-						      <option value="" selected>--Select--</option>
-						      <option value="10.00">RM 10.00</option>
-						      <option value="20.00">RM 20.00</option>
-						      <option value="30.00">RM 30.00</option>
-						    </select>
-						  </label>
+							<label class="item item-input item-select">
+							    <div class="input-label font-medium" style="color:#999;">
+							      Location
+							    </div>
+							    <select>
+							      <option selected>--Select--</option>
+							      <option>Kuchai Lama</option>
+							      <option>Ampang</option>
+							      <option>Mid Valley</option>
+							    </select>
+							 </label>
 						</div>	
 					</div>
 				</div>
 			</div>
 			<!-- End of shipping detail -->
-				<p class="font-small center positive">OR</p>
-			<!--  Start of pickup details -->
-			<div class="card list" style="margin-top:1px;">
-				  <div class="item item-divider font-medium">
-				    Self Pickup
-				  </div>
-				  <label class="item item-input item-select">
-				    <div class="input-label">
-				      Location
-				    </div>
-				    <select>
-				      <option selected>--Select--</option>
-				      <option>Kuchai Lama</option>
-				      <option>Ampang</option>
-				      <option>Mid Valley</option>
-				    </select>
-				  </label>
-			</div>
-			<!-- End of pickup details -->
 
 			<div class="row">
 				<div class="col">
-				<!-- ng-href="#/app/payment" -->
 					<button type="submit" class="button button-block btnCheckOut font-medium" 
 					ng-click="toPayment()">
 				  		Pay Now
@@ -88,6 +112,9 @@
 				</div>
 			</div>
 		</form>
+      </ion-content>
+    </ion-tab>
+    <!-- End of two tabs -->
+  </ion-tabs>
 
-	</ion-content>
 </ion-view>
