adjust product details, shipping

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="false">
+<ion-side-menus enable-menu-with-back-views="true">
   <ion-side-menu-content>
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
@@ -8,6 +8,14 @@
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
       </ion-nav-buttons>
+
+      <ion-nav-buttons side="right">
+        <a class="button" ng-href="#/app/cart/list/{{cart_id}}">
+          <img ng-src="/img/cart.png" width="25" />
+        </a>
+      </ion-nav-buttons>
+
+
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
 </ion-side-menu-content>
@@ -59,14 +67,14 @@
           <span class="badge badge-assertive">0</span>
         </ion-item>
 
-        <ion-item menu-close href="#/app/promotion">
-          <i class="ion-film-marker"></i>
-          Promotion
-        </ion-item>
-
         <ion-item menu-close href="#/app/profile">
           Profile - temp
-        </ion-item> 
+        </ion-item>
+
+        <!--  <ion-item menu-close href="#/app/promotion">
+          <i class="ion-film-marker"></i>
+          Promotion
+        </ion-item> --> 
 
         <!-- <ion-item menu-close href="#/app/cart/list">
           <i class="ion-film-marker"></i>
