--- a/www/templates/shipping.html
+++ b/www/templates/shipping.html
@@ -87,7 +87,7 @@
 					<div class="row">
 						<div class="col">
 							<label class="item item-input item-select">
-							    <div class="input-label font-medium" style="color:#999;">
+							    <div class="input-label" style="color:#C0C0C0;">
 							      Location
 							    </div>
 							    <select>
