--- a/www/templates/shipping.html
+++ b/www/templates/shipping.html
@@ -10,7 +10,7 @@
     <ion-tab title="Delivery">
 	    <ion-content>
 	      <!-- Tab 1 content -->
-		    <form>
+		    <form ng-submit="shipment(shipmentInfo)">
 		    	<!-- Shipping information of guest info  -->
 				<div class="card pt75">
 					<div class="item item-divider font-medium">
@@ -19,17 +19,17 @@
 					<div class="item item-text-wrap">
 						<div class="row">
 							<div class="col col-50">
-								<input type="text" placeholder="First Name">
+								<input type="text" ng.model="shipmentInfo.given_name" placeholder="Given Name">
 							</div>
 							<div class="col col-50">
-								<input type="text" placeholder="Last Name">
+								<input type="text" ng-model="shipmentInfo.family_name" placeholder="Family Name">
 							</div>
 						</div>
 						<div class="row">
-							<input type="text" class="ml5" placeholder="Phone Number">
+							<input type="text" class="ml5" ng-model="shipmentInfo.phone" placeholder="Phone Number">
 						</div>
 						<div class="row">
-							<input type="text" class="ml5"  placeholder="Street Address 1">
+							<input type="text" class="ml5" ng-model="shipmentInfo.address"  placeholder="Street Address 1">
 						</div>
 						<div class="row">
 							<input type="text" class="ml5"  placeholder="Street Address 2">
@@ -41,15 +41,26 @@
 							<div class="col col-50">
 								<input type="text" placeholder="Zip">
 							</div>
-						</div> 
+						</div>
+						<div class="row">
+						<div class="col">
+							<label class="item item-input item-select">
+							    <div class="input-label font-medium" style="color:#999;">
+							      Shipping Method
+							    </div>
+							    <select ng-model="mySelect" ng-change="showSelectValue(mySelect)">
+							      <option ng-repeat="shipmentInfo in shipmentList" value="{{shipmentInfo.id}}">{{shipmentInfo.name}}</option>
+							    </select>
+							 </label>
+						</div>	
+					</div> 
 					</div>
 				</div>
 				<!-- End of shipping detail -->
 
 				<div class="row">
 					<div class="col">
-						<button type="submit" class="button button-block btnCheckOut font-medium" 
-					ng-click="toPayment()">
+						<button type="submit" class="button button-block btnCheckOut font-medium">
 				  		Pay Now
 					</button>
 					</div>
@@ -61,7 +72,7 @@
     <ion-tab title="Self Pickup">
       <!-- Tab 2 content -->
       <ion-content>
- 		<form>
+ 		<form ng-submit="selfpickup(locationInfo)">
 	    	<!-- Pickup information of guest info  -->
 			<div class="card pt75">
 				<div class="item item-divider font-medium">
@@ -90,11 +101,8 @@
 							    <div class="input-label font-medium" style="color:#999;">
 							      Location
 							    </div>
-							    <select>
-							      <option selected>--Select--</option>
-							      <option>Kuchai Lama</option>
-							      <option>Ampang</option>
-							      <option>Mid Valley</option>
+							    <select ng-model="mySelect" ng-change="showSelectValue(mySelect)">
+							      <option ng-repeat="locationInfo in locationList" value="{{locationInfo.id}}">{{locationInfo.name}}</option>
 							    </select>
 							 </label>
 						</div>	
@@ -105,8 +113,7 @@
 
 			<div class="row">
 				<div class="col">
-					<button type="submit" class="button button-block btnCheckOut font-medium" 
-					ng-click="toPayment()">
+					<button type="submit" class="button button-block btnCheckOut font-medium">
 				  		Pay Now
 					</button>
 				</div>
