--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -64,7 +64,7 @@
         <ion-item menu-close href="#/app/cart/list/{{cart_id}}">
           <i class="ion-android-cart"></i>
           Cart List
-          <span class="badge badge-assertive">0</span>
+          <span class="badge badge-assertive">{{cartList[0].cart_count}}</span>
         </ion-item>
 
         <ion-item menu-close href="#/app/profile">
