--- a/www/templates/cart.list.html
+++ b/www/templates/cart.list.html
@@ -11,7 +11,7 @@
 		  	<img class="cartImg" ng-src="{{img}}{{cartInfo.photo}}">
 		  		<br><br>
 		  	<span class="greenbox mt10">Subtotal</span>
-		  	<span class="subtotal">MYR {{cartInfo.price}}
+		  	<span class="subtotal">RM {{cartInfo.price}}
 		  	</span>
 		  </div>
 		  
@@ -20,7 +20,7 @@
 		  	<br>
 		  	<span class="pl5">Quantity:</span><span style="color:#F1C40F;"> {{cartInfo.qty}}</span>
 		  	<br>
-		  	<span class="pl5">Price:</span><span style="color:#7F8C8D;"> MYR {{cartInfo.unit_price}}</span>
+		  	<span class="pl5">Price:</span><span style="color:#7F8C8D;"> RM {{cartInfo.unit_price}}</span>
 		  </div>
 		  <div class="col"></div>
 		</div>
