--- a/www/templates/product.details.html
+++ b/www/templates/product.details.html
@@ -2,9 +2,9 @@
   <ion-content ng-controller="productdetails">
 
     <div class="container">
-        <div class="row default-bg">
+        <div class="row" style="background:#F1F1F1;">
           <div class="col col-100 center">
-            <label>{{productDetails.name}}</label>
+            <label class="font-small">{{productDetails.name}}</label>
           </div>
         </div>
         <div class="row mt5">
