--- a/www/templates/shipping.html
+++ b/www/templates/shipping.html
@@ -76,10 +76,10 @@
 	    	<!-- Pickup information of guest info  -->
 			<div class="card pt75">
 				<div class="item item-divider font-medium">
-					Cash On Delivery
+					Self Pick Up
 				</div>
 				<div class="item item-text-wrap">
-					<div class="row">
+					<!-- <div class="row">
 						<div class="col col-50">
 							<input type="text" placeholder="First Name">
 						</div>
@@ -94,7 +94,7 @@
 						<div class="col col-50">
 							<input type="text" placeholder="Venue">
 						</div>
-					</div>
+					</div> -->
 					<div class="row">
 						<div class="col">
 							<label class="item item-input item-select">
